# parametric_eq

./: Cargo.toml  build.rs
src/: eq_ui.rs  filters.rs  main.rs  signal_analysis.rs  test.rs
ui/: appwindow.slint  eq_canvas.slint  eq_control_section.slint  eq_ui.slint  my_slider.slint  sketches.excalidraw
